# llm-powered-contextual-search-and-summarization-backend

./: Dockerfile  README.md  key.pem.base64  logging_config.py  main.py  pyproject.toml  requirements.txt  system_architecture.pptx
.github/workflows/: CI_CD_Pipeline.yml  github-actions-demo-1.yml  learn-github-actions.yml
credentials/: gpt-4-secrets.json
src/: config.py
src/api/v1/: app.py
src/gen_ai/rag/: chat_processing.py  doc_processing.py  document_processing.py  pinecone_operation.py  prompt_template.py
src/models/: models.py  requests.py
src/utils/: aws_operation.py  env_variable.py  exceptions.py  user_authentication.py
tests/: test_env_variable.py
